--- a/candidato/Dockerfile
+++ b/candidato/Dockerfile
@@ -1,6 +1,6 @@
 FROM openjdk:17
 MAINTAINER Rafael Eduardo
 WORKDIR /app
-COPY /target/*jar /app.jar
+COPY /target/*.jar /app.jar
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "/app.jar"]
